@@ -55,7 +55,7 @@ module ActiveSupport
     
     def inspect #:nodoc:
       consolidated = parts.inject(Hash.new(0)) { |h,part| h[part.first] += part.last; h }
-      [:years, :months, :days, :hours, :minutes, :seconds].map do |length|
+      [:years, :months, :days, :minutes, :seconds].map do |length|
         n = consolidated[length]
         "#{n} #{n == 1 ? length.to_s.singularize : length.to_s}" if n.nonzero?
       end.compact.to_sentence
